<resources>
    <string name="app_name">Dinislam\nAPK</string>
    <string name="most_popular">Самое популярное</string>
    <string name="top_rated">Высший рейтинг</string>
    <string name="film_poster">Постер фильма</string>
    <string name="description">Описание:</string>
    <string name="release_date">Дата релиза:</string>
    <string name="rating">Рейтинг:</string>
    <string name="original_title">Оригинальное название:</string>
    <string name="title">Название:</string>
    <string name="trailer_title">Трейлеры</string>
    <string name="favourites">Избранное</string>
    <string name="string_plug">Список пуст, добавьте фильмы.</string>
    <string name="review_title">Отзывы</string>
</resources>
